{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 51,
  "lineage": "677a6105-7bb3-c6a2-e5d3-94df3c586383",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-055b3594aeb839416",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055b3594aeb839416",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e937e2e8a3eef000",
            "private_dns": "ip-172-31-12-13.ec2.internal",
            "private_ip": "172.31.12.13",
            "public_dns": "ec2-34-205-172-3.compute-1.amazonaws.com",
            "public_ip": "34.205.172.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d1beba908de6a4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220619191643735000000001",
              "terraform-20220619191643736400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01be9c58aecb77905",
            "tags": {
              "name": "myec2instance-us-east-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023700091b91769fa",
              "sg-064a2370c925cba49"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg-ssh",
            "aws_security_group.mysg-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.az_list"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-07d55fdaee52401b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d55fdaee52401b3",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0548457e0f69c7207",
            "private_dns": "ip-172-31-85-0.ec2.internal",
            "private_ip": "172.31.85.0",
            "public_dns": "ec2-54-197-39-170.compute-1.amazonaws.com",
            "public_ip": "54.197.39.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00aa58a5544636beb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220619191643735000000001",
              "terraform-20220619191643736400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edb1da162304aaee",
            "tags": {
              "name": "myec2instance-us-east-1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023700091b91769fa",
              "sg-064a2370c925cba49"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg-ssh",
            "aws_security_group.mysg-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.az_list"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-0df3da2290c2833df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df3da2290c2833df",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e389877f7789b6e",
            "private_dns": "ip-172-31-27-153.ec2.internal",
            "private_ip": "172.31.27.153",
            "public_dns": "ec2-54-227-19-62.compute-1.amazonaws.com",
            "public_ip": "54.227.19.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-038bc9417df346bde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220619191643735000000001",
              "terraform-20220619191643736400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0720380c59b350122",
            "tags": {
              "name": "myec2instance-us-east-1c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023700091b91769fa",
              "sg-064a2370c925cba49"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg-ssh",
            "aws_security_group.mysg-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.az_list"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-0d30b9cb0b7d31c44",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d30b9cb0b7d31c44",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0313c8b889a00a115",
            "private_dns": "ip-172-31-33-238.ec2.internal",
            "private_ip": "172.31.33.238",
            "public_dns": "ec2-54-81-118-27.compute-1.amazonaws.com",
            "public_ip": "54.81.118.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09de4b9b6366b8ce4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220619191643735000000001",
              "terraform-20220619191643736400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb6fe7b5a07f572e",
            "tags": {
              "name": "myec2instance-us-east-1d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023700091b91769fa",
              "sg-064a2370c925cba49"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg-ssh",
            "aws_security_group.mysg-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.az_list"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-06515e7a3ff2ee9c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06515e7a3ff2ee9c0",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04927b10303d00183",
            "private_dns": "ip-172-31-67-182.ec2.internal",
            "private_ip": "172.31.67.182",
            "public_dns": "ec2-44-200-175-204.compute-1.amazonaws.com",
            "public_ip": "44.200.175.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0943fd6fec7da9da3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220619191643735000000001",
              "terraform-20220619191643736400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0090c66e8433bd99b",
            "tags": {
              "name": "myec2instance-us-east-1f"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023700091b91769fa",
              "sg-064a2370c925cba49"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg-ssh",
            "aws_security_group.mysg-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643077234078:security-group/sg-023700091b91769fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023700091b91769fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220619191643736400000002",
            "name_prefix": null,
            "owner_id": "643077234078",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0616f27eb0c702510"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643077234078:security-group/sg-064a2370c925cba49",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064a2370c925cba49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow web access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220619191643735000000001",
            "name_prefix": null,
            "owner_id": "643077234078",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0616f27eb0c702510"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}